# requirements-advisor

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml
.devcontainer/: devcontainer.json  docker-compose.yml
content/: requirements_management_guide.jsonl
src/requirements_advisor/: __init__.py  cli.py  config.py  logging.py  server.py
src/requirements_advisor/embeddings/: __init__.py  base.py  voyage.py
src/requirements_advisor/images/: __init__.py  base.py  cache.py
src/requirements_advisor/ingestion/: __init__.py  pipeline.py
src/requirements_advisor/vectorstore/: __init__.py  base.py  chroma.py
tests/: conftest.py  test_cli.py  test_config.py  test_embeddings.py  test_images.py  test_ingestion.py  test_server.py  test_vectorstore.py
